# Coursera_red

./: BITBUCKET-PIPELINES.YML  CMakeLists.txt  Checker.py  Dockerfile  README.md  appveyor.yml  install-linux.sh  latex_example.md  local_history.patch  local_history1.patch  main.cpp  streams.cpp  test.h  tricky_return.cpp
AirportCounter/: airport_counter.cpp  solution.cpp
ConcurrentMap/: concurrent_map.cpp  test.cpp
Synchronized/: synchronized.cpp
account/: account.cpp
async_future/: async_future.cpp
athlets/: athlets.cpp
coursera/: main.cpp  test_runner.h
coursera.xcodeproj/: project.pbxproj
coursera.xcodeproj/xcuserdata/bulakhigor.xcuserdatad/xcschemes/: xcschememanagement.plist
deque_push_back/: deque_push_back.cpp
ebook/: fast.cpp  slow.cpp
explore_key_words/: explore_key_words.cpp
express/: test.cpp
final_red/: iterator_range.h  main.cpp  parse.cpp  parse.h  search_server.cpp  search_server.h  synhronized.h  tests.h  total_duration.h
final_red/c-plus-plus-red-belt-final-assignment-master/: search_server.cpp
google_tests/: CMakeLists.txt
google_tests/tests/: CMakeLists.txt
group_strings/: group_heavy_strings.cpp
hotel_booking/: main.cpp
josephus_permutation/: josephus_permutation.cpp
linked_list/: linked_list.cpp
matrix_generator/: matrix_generator.cpp
merge_sort/: merge_sort_3.cpp  solution.cpp
object_pull/: object_pull.cpp
priority/: priority_collection_2.cpp
server_stats/: server_stats.cpp  solution_stats.cpp  solution_stats.h  stats.cpp  stats.h
simple_vector/: copy_assignment_solution.h  simple_vector.cpp  simple_vector.h  solution.h
simple_vector_2/: simple_vector_2.h
split_into_sentence/: solution.cpp  split_into_sentences.cpp
src/: main.cpp  sample_hello_world.h  test.cpp
stack_vector/: stack_vector.cpp  stack_vector.h
string_view/: string_view.cpp
swap_sort_copy/: swap_sort_copy.cpp
text_editor/: solution.cpp  text_editor.cpp
translator/: translator.cpp
vector/: vector.cpp
